objects/dbu_FAQ__c.object
<CustomObject>
    <description>The FAQs displayed on CSSNA Homepage</description>
    <fields>
        <fullName>Answer__c</fullName>
        <inlineHelpText>Answer for FAQs</inlineHelpText>
        <label>Answer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQCategory__c</fullName>
        <label>FAQCategory</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cummins R2.8 Turbo Diesel</fullName>
                </value>
                <value>
                    <fullName>My Account</fullName>
                </value>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>This Site</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_FAQ_Name__c</fullName>
        <label>dbu FAQ Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>dbu FAQ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FAQ-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>dbu FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>